# erpnext-opentelemetry-monitoring

./: .pre-commit-config.yaml  README.md  hooks.py  metrics_hooks.py  modules.txt  pyproject.toml
erpnext_opentelemetry_monitoring/: README.md  hooks.py  package.json
erpnext_opentelemetry_monitoring/erpnext_opentelemetry_monitoring/: hooks.py  otel_metrics.py
erpnext_opentelemetry_monitoring/public/js/: otel.js
